--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ data/raw/*
 # Interim data: the big sqlite database and occurrence text file for Europe
 data/interim/*.sqlite
 data/interim/*.tsv
+
+# Cube at class level: bigger than 100 MB
+data/interim/be_classes_cube.csv
